fix horizontal scroll

--- a/resources/assets/styles/layouts/_sidebar.scss
+++ b/resources/assets/styles/layouts/_sidebar.scss
@@ -8,8 +8,7 @@ aside#sidebar {
 			line-height: 1.3rem;
 			border-bottom: 1px solid $color-grey;
 			margin-bottom: 0.5rem;
-			font-weight: bold;
-
+			font-weight: normal;
 			&:last-child {
 				border-bottom: 0;
 			}
